$Id$

2005-09-03 Tilman Sauerbeck (tilman at code-monkey de)
        * src/plugin/imap.c: Merged Sebastian Dransfeld's patch that
          implents "connection sharing"
        * src/plugin/pop3.c: Updated for recent imap changes
        * src/plugin/{imap,pop3}.c: Remove event handlers for server
          events on shutdown (Sebastian Dransfeld)

2005-08-29 Michael Jennings (mej at eterm org)
        * Makefile.am, embrace.spec:  Applied patch from Jim Perrin
          <jperrin@gmail.com> for "make dist" and RPM build.

2005-08-03 Tilman Sauerbeck (tilman at code-monkey de)
        * data/Makefile.am: Fixed installation directory for
          create_embrace_cfg.sh

2005-06-29 Tilman Sauerbeck (tilman at code-monkey de)
        * src/plugins/{pop3,imap}/{pop3/imap}.c: Fixed compilation with
          latest ecore_con

2005-05-17 Tilman Sauerbeck (tilman at code-monkey de)
        * src/plugins/pop3/pop3.c: Don't die on unexpected input data

2005-04-26 Tilman Sauerbeck (tilman at code-monkey de)
        * src/plugins/pop3/pop3.c: Send CRLF after QUIT, too
        * src/plugins/pop3/pop3.c: Send QUIT on error

2005-03-25 Tilman Sauerbeck (tilman at code-monkey de)
        * README: documented the force-mailbox-check feature

2005-03-25 Tilman Sauerbeck (tilman at code-monkey de)
        * Released version 0.0.2

2005-03-25 Tilman Sauerbeck (tilman at code-monkey de)
        * configure.ac, src/Makefile.am: Check for EDB and include EDB CFLAGS
          and LIBS

2005-03-22 Tilman Sauerbeck (tilman at code-monkey de)
        * src/embrace.c, data/themes/default/Makefile.am:
          The default extension for Edje files is 'edj' now

2005-02-06 Tilman Sauerbeck (tilman at code-monkey de)
        * data/themes/default/embrace.edc,
          data/themes/default/parts/mailbox_background.edc,
          data/themes/default/parts/mailbox_icon.edc,
          src/embrace.c: Fixed the force-mailbox-check feature.

2005-01-30 Tilman Sauerbeck (tilman at code-monkey de)